Fixing text color contrast

--- a/_includes/css/0-settings/light-dark.css
+++ b/_includes/css/0-settings/light-dark.css
@@ -35,6 +35,6 @@
   --border-color-darker     : light-dark(var(--color-600), var(--color-400));
   --border-color-darkest    : light-dark(var(--color-800), var(--color-300));
 
-  --logo-color              : light-dark(var(--color-800), var(--color-200));
-  --logo-color-bg           : light-dark(var(--color-200), var(--color-800));
+  --logo-color              : light-dark(var(--color-600), var(--color-300));
+  --logo-color-bg           : light-dark(var(--color-300), var(--color-600));
 }
