--- a/_includes/css/2-base/init.css
+++ b/_includes/css/2-base/init.css
@@ -35,7 +35,7 @@ kbd {
   background: var(--color-zero);
   border-bottom: var(--border-size) var(--border-style) var(--border-color);
   border-radius: var(--border-radius-small);
-  color: var(--text-color-lighter);
+  color: var(--text-color-light);
   padding: var(--space-3xs) var(--space-2xs);
   font-size: smaller;
 }
