--- a/_includes/css/4-layouts/post.css
+++ b/_includes/css/4-layouts/post.css
@@ -57,7 +57,7 @@ photo-cover__caption {
 	padding: var(--space-3xs) var(--space-xs);
 	font-size: var(--step--2);
 	text-align: center;
-	color: var(--text-color-lighter);
+	color: var(--text-color-light);
 }
 
 .post img {
@@ -85,7 +85,7 @@ photo-cover__caption {
 	display: block;
 	padding: var(--space-smaller) var(--space-default);
 	text-decoration: none;
-	color: var(--text-color-lighter);
+	color: var(--text-color-light);
 }
 
 .post-nav a:hover, .post-nav a:active {
